--- a/_data/languages/en-us.json
+++ b/_data/languages/en-us.json
@@ -35,8 +35,8 @@
     "acl_1": "This is how you can built the access control list (ACL):",
     "acl_2": "Create the ACL",
     "acl_3": "The default action is DENY access",
-    "acl_4": "Register two roles, Users is registered users",
-    "acl_5": "and guests are users without a defined identity",
+    "acl_4": "Register two roles, Users",
+    "acl_5": "and Guests",
     "acl_description": "Access Control List allows users to access the modules they're authorized to",
     "auto_loader": "Autoloader",
     "auto_loader_1": "Register namespaces, prefixes, directories or classes. Take advantage of the autoloader events and maintain full control over what files are loaded and from where.",
@@ -72,6 +72,7 @@
     "dependency_injection_3": "Register classes, functions, components",
     "dependency_injection_4": "Use anywhere else in code",
     "dependency_injection_description": "Dependency Injection and Location of services and it's itself a container for them.",
+    "development": "Development by",
     "docs": "Docs",
     "documentation": "Documentation",
     "donate": "Donate",
@@ -81,7 +82,7 @@
     "download_compilation": "Compilation",
     "download_compilation_1": "On Linux you can easily compile and install the extension from source code.",
     "download_compilation_11": "1. To create the extension from C source follow these steps: ",
-    "download_compilation_12": "2. Add the extension to your php.ini. The actual path can be found at the end of the previous step output (look for the \"Installing shared extensions\"): ",
+    "download_compilation_12": "2. Add the extension to your php.ini: ",
     "download_compilation_13": "3. Finally, restart the webserver",
     "download_cpanel": "cPanel",
     "download_cpanel_1": "After requests from the community, the cPanel developers released a custom module that allows for installation of Phalcon in cPanel hosted sites. Information can be found <a href=':1:'>here</a>. The module is maintained in <a href=':2:'>Github</a>.",
@@ -133,19 +134,23 @@
     "encryption": "Encryption",
     "encryption_1": "Phalcon provides encryption facilities via the Phalcon\\Crypt component. This class offers simple object-oriented wrappers to the openssl PHP's encryption library.",
     "encryption_2": "This is a secret key (32 bytes).",
-    "encryption_3": "This is the text that you want to encrypt.",
+    "encryption_3": "The text you want to encrypt.",
     "events": "Events",
     "events_description": "Extend the most of the framework components by setting 'hook points'. Create your own events and make your application more flexible and powerful",
     "events_management": "Events Management",
     "events_management_1": "An EventsManager allows us to attach listeners to a particular type of event. The type that interests us now is 'dispatch'. The following code filters all events produced by the Dispatcher:",
     "events_management_2": "Create an events manager",
-    "events_management_3": "Listen for events produced in the dispatcher using the Security plugin",
-    "events_management_4": "Handle exceptions and not-found exceptions using NotFoundPlugin",
-    "events_management_5": "Assign the events manager to the dispatcher",
+    "events_management_3": "Listen for events produced in the",
+    "events_management_6": "dispatcher using the SecurityPlugin",
+    "events_management_4": "Handle exceptions and not-found",
+    "events_management_7": "exceptions using NotFoundPlugin",
+    "events_management_5": "Assign the events manager",
+    "events_management_8": "to the dispatcher",
+    "features": "Features",
     "flash_messages": "Flash messages",
     "flash_messages_1": "Use the flash notifier to show notifications to a user in a web application:",
     "flash_messages_2": "there were errors in this form",
-    "flash_messages_3": "yes!, everything went very smoothly",
+    "flash_messages_3": "yes!, everything is fine",
     "flash_messages_4": "this is a notice for users",
     "flash_messages_5": "this is just a warning",
     "flash_messages_description": "Flash messages are used to notify the user about the state of actions.",
@@ -158,6 +163,8 @@
     "get_phalcon": "Get Phalcon",
     "header_slogan": "Its innovative architecture makes Phalcon the fastest PHP framework ever built!",
     "header_tagline": "A full-stack PHP framework delivered as a C-extension",
+    "header_description": "Developers do not need to know C to use Phalcon. Its functionality is exposed as PHP classes and interfaces under the Phalcon namespace, ready to be used.",
+    "help": "Help",
     "high_performance_php_framework": "High Performance PHP Framework",
     "hosting": "Hosting",
     "hosting_amazon_ec2_1": "Amazon Elastic Compute Cloud delivers scalable, pay-as-you-go compute capacity in the cloud.",
@@ -197,8 +204,8 @@
     "hosting_webfaction_title": "WebFaction",
     "i18n": "i18n",
     "i18n_1": "The component Phalcon\\Translate aids in creating multilingual applications. Applications using this component, display content in different languages, based on the user's chosen language supported by the application.",
-    "i18n_2": "Ask browser what is the best language",
-    "i18n_3": "Check if we have a translation file for that lang",
+    "i18n_2": "Browser's best language",
+    "i18n_3": "Check the lang translation file",
     "i18n_4": "Fallback to some default",
     "i18n_5": "Return a translation object",
     "i18n_description": "Translate your applications to many languages easily",
@@ -260,6 +267,8 @@
     "sharding_2": "This service returns a MySQL database",
     "sharding_3": "This service returns a PostgreSQL database",
     "sharding_description": "Connect, store and retrieve data from many database systems at the same time",
+    "site": "Site",
+    "social": "Social",
     "sponsored_by": "Sponsored by",
     "sponsors": "Sponsors",
     "sponsors_and_supporters": "Sponsors and Supporters",
@@ -327,8 +336,8 @@
     "transactions_2": "Create a transaction manager",
     "transactions_3": "Request a transaction",
     "transactions_4": "Get the robots to be deleted",
-    "transactions_5": "Something's gone wrong, we should rollback the transaction",
-    "transactions_6": "Everything's gone fine, let's commit the transaction",
+    "transactions_5": "Something is wrong - rollback transaction",
+    "transactions_6": "Everything is OK - commit transaction",
     "transactions_7": "Robots were deleted successfully!",
     "transactions_8": "Failed, reason: ",
     "transactions_description": "Transactions in Phalcon allows to keep the data integrity safe.",
